objects/GDT_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Group__c</fullName>
        <label>Affiliate Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR Asia</fullName>
                </value>
                <value>
                    <fullName>PR Chatter</fullName>
                </value>
                <value>
                    <fullName>PR Europe</fullName>
                </value>
                <value>
                    <fullName>PR Holding</fullName>
                </value>
                <value>
                    <fullName>PR Americas</fullName>
                </value>
                <value>
                    <fullName>PR Latin America</fullName>
                </value>
                <value>
                    <fullName>PR North America</fullName>
                </value>
                <value>
                    <fullName>PR Group</fullName>
                </value>
                <value>
                    <fullName>RICARD</fullName>
                </value>
                <value>
                    <fullName>MMPJ</fullName>
                </value>
                <value>
                    <fullName>GDT_Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>GDT_Admin</fullName>
                </value>
                <value>
                    <fullName>MMPJ-G.H MUMM</fullName>
                </value>
                <value>
                    <fullName>MMPJ-MARTELL</fullName>
                </value>
                <value>
                    <fullName>MMPJ-PIERRIER JOUET</fullName>
                </value>
                <value>
                    <fullName>PERNOD-PERNOD</fullName>
                </value>
                <value>
                    <fullName>PR Americas</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Asia Regional Marketing (RM)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Asia Support</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Asia Travel Retail (TR)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Cambodia (KH)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR China (CN)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Gulf (GF)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Hong Kong (HK)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Indonesia (ID)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Japan (JP)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Korea (KR)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Macau (MO)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Malaysia (MY)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Philippines (PH)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Singapore (SG)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Taiwan (TW)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Thailand (TH)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-PR Vietnam (VN)</fullName>
                </value>
                <value>
                    <fullName>PR Chatter-PR Chatter</fullName>
                </value>
                <value>
                    <fullName>PR Europe-Jan Becher (JB)</fullName>
                </value>
                <value>
                    <fullName>PR Europe-PR Austria (AT)</fullName>
                </value>
                <value>
                    <fullName>PR Europe-PR Baltics</fullName>
                </value>
                <value>
                    <fullName>PR Europe-PR Baltics-Estonia (EE)</fullName>
                </value>
                <value>
                    <fullName>PR Europe-PR Baltics-Latvia (LT)</fullName>
                </value>
                <value>
                    <fullName>PR Europe-PR Baltics-Lithuania (LT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allowed_Licences__c</fullName>
        <label>Allowed Licences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Elements_Date__c</fullName>
        <label>Date available elements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commentary__c</fullName>
        <label>Commentary</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Backup__c</fullName>
        <label>Date of the backup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivery__c</fullName>
        <label>Date delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Expected__c</fullName>
        <label>Date expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Expiration__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request__c</fullName>
        <label>Date of request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Restore__c</fullName>
        <label>Date of the restore</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment_Destination__c</fullName>
        <label>Environment Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment_Source__c</fullName>
        <label>Environment Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRODUCTION</fullName>
                </value>
                <value>
                    <fullName>STAGING</fullName>
                </value>
                <value>
                    <fullName>Sandbox NAME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_description_of_the_incident__c</fullName>
        <label>Full description of the incident</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GDT_Services__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GDT Services</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GDT_Services__c.Name</field>
                <operation>contains</operation>
                <value>SFDC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GDT_Services__c</referenceTo>
        <relationshipLabel>GDT Activities</relationshipLabel>
        <relationshipName>GDT_Activities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GDT_Template_of_services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDT Template of services</label>
        <referenceTo>GDT_Template__c</referenceTo>
        <relationshipLabel>GDT Activities</relationshipLabel>
        <relationshipName>GDT_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>GDT Activities</relationshipLabel>
        <relationshipName>GDT_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Français</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_Priority__c</fullName>
        <label>Level of priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1 ( within 4 Hours)</fullName>
                </value>
                <value>
                    <fullName>Priority 2 ( within 1 Business day)</fullName>
                </value>
                <value>
                    <fullName>Priority 3 ( within 3 business day)</fullName>
                </value>
                <value>
                    <fullName>Priority 4 ( within 5 business day)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Namespace_Prefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objects_to_backup__c</fullName>
        <label>Objects to backup</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objects_to_restore__c</fullName>
        <label>Objects to restore</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Requester_Email__c</fullName>
        <label>Other Requester Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Requester_Name__c</fullName>
        <label>Other Requester Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PR_Requester_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PR Requester Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDT_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Managed</fullName>
                </value>
                <value>
                    <fullName>Unmanaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDT_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>GDT_Admin</fullName>
                </value>
                <value>
                    <fullName>MMPJ-Extranet Vigneron</fullName>
                </value>
                <value>
                    <fullName>MMPJ-MOOC</fullName>
                </value>
                <value>
                    <fullName>MMPJ-PJ-By&amp;For</fullName>
                </value>
                <value>
                    <fullName>MMPJ-TopGun</fullName>
                </value>
                <value>
                    <fullName>PERNOD-</fullName>
                </value>
                <value>
                    <fullName>PR Americas-BI</fullName>
                </value>
                <value>
                    <fullName>PR Asia-Asia Combined system</fullName>
                </value>
                <value>
                    <fullName>PR Asia-CAPEX</fullName>
                </value>
                <value>
                    <fullName>PR Asia-Concur (Cloud service solution)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-CRM</fullName>
                </value>
                <value>
                    <fullName>PR Asia-CRM Mobile App</fullName>
                </value>
                <value>
                    <fullName>PR Asia-eForm</fullName>
                </value>
                <value>
                    <fullName>PR Asia-e-HR</fullName>
                </value>
                <value>
                    <fullName>PR Asia-FOC (Free of Charge system)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-G&amp;H (Gift &amp; Hospitality)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-Generic Brand</fullName>
                </value>
                <value>
                    <fullName>PR Asia-Gift Box</fullName>
                </value>
                <value>
                    <fullName>PR Asia-LUX (Luxury CRM system)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-MARKETO</fullName>
                </value>
                <value>
                    <fullName>PR Asia-MFM (Marketing Fund Management system)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-NPL (New Product Launch system)</fullName>
                </value>
                <value>
                    <fullName>PR Asia-Promoter Apps</fullName>
                </value>
                <value>
                    <fullName>PR Asia-TnE (Travel &amp; Entertainment Claim system)</fullName>
                </value>
                <value>
                    <fullName>PR Chatter-Chatter</fullName>
                </value>
                <value>
                    <fullName>PR Chatter-DAM</fullName>
                </value>
                <value>
                    <fullName>PR Chatter-ESN Best Practices</fullName>
                </value>
                <value>
                    <fullName>PR Chatter-I DID IT</fullName>
                </value>
                <value>
                    <fullName>PR Chatter-MOOC</fullName>
                </value>
                <value>
                    <fullName>PR Chatter-MyBrands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Version__c</fullName>
        <label>Project Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Fix</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Requested_Date__c</fullName>
        <label>SFDC Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <formula>GDT_Services__r.Service_Levels_commitments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <label>Sandbox Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Type__c</fullName>
        <label>Sandbox Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer Pro</fullName>
                </value>
                <value>
                    <fullName>Partial Copy</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC - S01 New SandBox</fullName>
                </value>
                <value>
                    <fullName>SFDC - S02 Request of release</fullName>
                </value>
                <value>
                    <fullName>SFDC - S03 Sandbox Refresh</fullName>
                </value>
                <value>
                    <fullName>SFDC - S04 Standard object custom fields request</fullName>
                </value>
                <value>
                    <fullName>SFDC - S05 Appexchange install and setup</fullName>
                </value>
                <value>
                    <fullName>SFDC - S06 Incident Resolution</fullName>
                </value>
                <value>
                    <fullName>SFDC - S07 Creation of power delegation</fullName>
                </value>
                <value>
                    <fullName>SFDC - S08 Creation of new role and profile</fullName>
                </value>
                <value>
                    <fullName>SFDC - S09 Data Backup</fullName>
                </value>
                <value>
                    <fullName>SFDC - S10 Data Restore</fullName>
                </value>
                <value>
                    <fullName>SFDC - S11 Training on development standard</fullName>
                </value>
                <value>
                    <fullName>SFDC - S12 User Assignments</fullName>
                </value>
                <value>
                    <fullName>SFDC - S13 Data Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Waiting for user</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Code__c</fullName>
        <formula>GDT_Services__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDT Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Activity_Name__c</columns>
        <columns>Affiliate_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Environment_Source__c</columns>
        <columns>Environment_Destination__c</columns>
        <columns>Date_Request__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GDT</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Activity_Name__c</columns>
        <columns>Affiliate_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Environment_Source__c</columns>
        <columns>Environment_Destination__c</columns>
        <columns>Date_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>GDT</label>
        <language>en_US</language>
        <sharedTo>
            <group>GDT_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GDT_NOT_CLOSED</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Activity_Name__c</columns>
        <columns>Affiliate_Group__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Description__c</columns>
        <columns>Environment_Source__c</columns>
        <columns>Environment_Destination__c</columns>
        <columns>Date_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Environment_Destination__c</field>
            <operation>equals</operation>
            <value>Production</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <label>GDT NOT CLOSED</label>
        <language>en_US</language>
        <sharedTo>
            <group>GDT_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>GDT Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDT Activities Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>